send-goods-confirm completed.
+ README.MD
* build.xml
  + version code
+ SendGoodsConfirmByPlatform
* updated XMLParser, to improve its preformance
* AlipayErrorCode, add new error types.
* other slight fix